# qt-hellobt

./: .gitignore  CMakeLists.txt  README.md  Thingy.cpp  Thingy.h  main.cpp  sdi-config.json  thingyController.cpp  thingyController.h
Web/: game.html  index.html  style.css
Web/scripts/: backgroundObjectClass.js  backup26-04-22.js  blockClass.js  connect.js  foregroundObjectClass.js  func.js  game.js  gameElem.js  plateformClass.js  playerClass.js  pnjClass.js
docs/: diag_seq.uxf  diagram_html_js.uxf
